# embodied-claude-code

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
.claude/hooks/: session_start.sh
audio-listen-mcp/: pyproject.toml
audio-listen-mcp/src/audio_listen_mcp/: capture.py  config.py  server.py  transcribe.py
audio-speak-mcp/: README.md  pyproject.toml
audio-speak-mcp/src/audio_speak_mcp/: config.py  server.py  tts.py
echo-buffer-mcp/: pyproject.toml
echo-buffer-mcp/src/echo_buffer_mcp/: buffer.py  server.py
experiments/: analyze_world.py  gen_kokoro.py  phase2_verify.py  phase2_vowel_bank.py  phase3_compare.py  phase3_synth.py  phase4_voice_cross.py  pyproject.toml  run_phase1.sh  voice_loop.md
memory-mcp/src/memory_mcp/: server.py
wifi-cam-mcp/src/wifi_cam_mcp/: camera.py  server.py
