[project]
name = "audio-speak-mcp"
version = "0.1.0"
description = "MCP server for text-to-speech output"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=1.0.0"]

[project.scripts]
audio-speak-mcp = "audio_speak_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_speak_mcp"]
