[project]
name = "echo-buffer-mcp"
version = "0.1.0"
description = "MCP server for resonant echo buffer — a decaying memory layer"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
echo-buffer-mcp = "echo_buffer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_buffer_mcp"]
